--- a/environment.yml
+++ b/environment.yml
@@ -1,63 +1,80 @@
-name: predictive-neuron
+name: predictive_neuron
 channels:
   - defaults
 dependencies:
-  - _pytorch_select=0.1=cpu_0
-  - blas=1.0=mkl
-  - brotli=1.0.9=hb1e8313_2
-  - ca-certificates=2021.10.26=hecd8cb5_2
-  - certifi=2021.10.8=py38hecd8cb5_2
-  - cffi=1.15.0=py38hc55c11b_1
+  - blas=1.0=openblas
+  - brotli=1.0.9=h1a28f6b_7
+  - brotli-bin=1.0.9=h1a28f6b_7
+  - bzip2=1.0.8=h620ffc9_4
+  - ca-certificates=2023.08.22=hca03da5_0
+  - cffi=1.15.1=py311h80987f9_3
+  - contourpy=1.0.5=py311h48ca7d4_0
   - cycler=0.11.0=pyhd3eb1b0_0
+  - filelock=3.9.0=py311hca03da5_0
   - fonttools=4.25.0=pyhd3eb1b0_0
-  - freetype=2.11.0=hd8bbffd_0
-  - giflib=5.2.1=haf1e3a3_0
-  - intel-openmp=2019.4=233
-  - jpeg=9d=h9ed2024_0
-  - kiwisolver=1.3.2=py38he9d5cce_0
-  - lcms2=2.12=hf1fd2bf_0
-  - libcxx=12.0.0=h2f01273_0
-  - libffi=3.3=hb1e8313_2
-  - libgfortran=3.0.1=h93005f0_2
-  - libmklml=2019.0.5=0
-  - libpng=1.6.37=ha441bb4_0
-  - libtiff=4.2.0=h87d7836_0
-  - libwebp=1.2.2=h56c3ce4_0
-  - libwebp-base=1.2.2=hca72f7f_0
-  - llvm-openmp=12.0.0=h0dcd299_1
-  - lz4-c=1.9.3=h23ab428_1
-  - matplotlib=3.5.1=py38hecd8cb5_0
-  - matplotlib-base=3.5.1=py38hfb0c5b7_0
-  - mkl=2019.4=233
-  - mkl-service=2.3.0=py38h9ed2024_0
-  - mkl_fft=1.3.0=py38ha059aab_0
-  - mkl_random=1.1.1=py38h959d312_0
+  - freetype=2.12.1=h1192e45_0
+  - giflib=5.2.1=h80987f9_3
+  - gmp=6.2.1=hc377ac9_3
+  - gmpy2=2.1.2=py311h40f64dc_0
+  - jinja2=3.1.2=py311hca03da5_0
+  - jpeg=9e=h80987f9_1
+  - kiwisolver=1.4.4=py311h313beb8_0
+  - lcms2=2.12=hba8e193_0
+  - lerc=3.0=hc377ac9_0
+  - libbrotlicommon=1.0.9=h1a28f6b_7
+  - libbrotlidec=1.0.9=h1a28f6b_7
+  - libbrotlienc=1.0.9=h1a28f6b_7
+  - libcxx=14.0.6=h848a8c0_0
+  - libdeflate=1.17=h80987f9_1
+  - libffi=3.4.4=hca03da5_0
+  - libgfortran=5.0.0=11_3_0_hca03da5_28
+  - libgfortran5=11.3.0=h009349e_28
+  - libopenblas=0.3.21=h269037a_0
+  - libpng=1.6.39=h80987f9_0
+  - libprotobuf=3.20.3=h514c7bf_0
+  - libtiff=4.5.1=h313beb8_0
+  - libuv=1.44.2=h80987f9_0
+  - libwebp=1.3.2=ha3663a8_0
+  - libwebp-base=1.3.2=h80987f9_0
+  - llvm-openmp=14.0.6=hc6e5704_0
+  - lz4-c=1.9.4=h313beb8_0
+  - markupsafe=2.1.1=py311h80987f9_0
+  - matplotlib=3.8.0=py311hca03da5_0
+  - matplotlib-base=3.8.0=py311h7aedaa7_0
+  - mpc=1.1.0=h8c48613_1
+  - mpfr=4.0.2=h695f6f0_1
+  - mpmath=1.3.0=py311hca03da5_0
   - munkres=1.1.4=py_0
-  - ncurses=6.3=hca72f7f_2
-  - ninja=1.10.2=py38haf03e11_3
-  - numpy=1.19.2=py38h456fd55_0
-  - numpy-base=1.19.2=py38hcfb5961_0
-  - olefile=0.46=pyhd3eb1b0_0
-  - openssl=1.1.1m=hca72f7f_0
-  - packaging=21.3=pyhd3eb1b0_0
-  - pillow=8.4.0=py38h98e4679_0
-  - pip=21.2.4=py38hecd8cb5_0
+  - ncurses=6.4=h313beb8_0
+  - networkx=3.1=py311hca03da5_0
+  - ninja=1.10.2=hca03da5_5
+  - ninja-base=1.10.2=h525c30c_5
+  - numpy=1.26.0=py311he598dae_0
+  - numpy-base=1.26.0=py311hfbfe69c_0
+  - openjpeg=2.3.0=h7a6adac_2
+  - openssl=3.0.11=h1a28f6b_2
+  - packaging=23.1=py311hca03da5_0
+  - pillow=10.0.1=py311h3b245a6_0
+  - pip=23.3=py311hca03da5_0
   - pycparser=2.21=pyhd3eb1b0_0
-  - pyparsing=3.0.4=pyhd3eb1b0_0
-  - python=3.8.12=h88f2d9e_0
+  - pyparsing=3.0.9=py311hca03da5_0
+  - python=3.11.5=hb885b13_0
   - python-dateutil=2.8.2=pyhd3eb1b0_0
-  - pytorch=1.7.1=cpu_py38hb87dcc5_0
-  - readline=8.1.2=hca72f7f_1
-  - scipy=1.6.2=py38h2515648_0
-  - setuptools=58.0.4=py38hecd8cb5_0
+  - pytorch=2.0.1=gpu_mps_py311h0436fea_0
+  - readline=8.2=h1a28f6b_0
+  - scipy=1.11.3=py311hc76d9b0_0
+  - setuptools=68.0.0=py311hca03da5_0
   - six=1.16.0=pyhd3eb1b0_1
-  - sqlite=3.37.2=h707629a_0
-  - tk=8.6.11=h7bc2e8c_0
-  - tornado=6.1=py38h9ed2024_0
-  - typing-extensions=3.10.0.2=hd3eb1b0_0
-  - typing_extensions=3.10.0.2=pyh06a4308_0
-  - wheel=0.37.1=pyhd3eb1b0_0
-  - xz=5.2.5=h1de35cc_0
-  - zlib=1.2.11=h4dc903c_4
-  - zstd=1.4.9=h322a384_0
-prefix: /opt/miniconda3/envs/predictive-neuron
+  - sleef=3.5.1=h80987f9_2
+  - sqlite=3.41.2=h80987f9_0
+  - sympy=1.11.1=py311hca03da5_0
+  - tk=8.6.12=hb8d0fd4_0
+  - tornado=6.3.3=py311h80987f9_0
+  - typing-extensions=4.7.1=py311hca03da5_0
+  - typing_extensions=4.7.1=py311hca03da5_0
+  - tzdata=2023c=h04d1e81_0
+  - wheel=0.41.2=py311hca03da5_0
+  - xz=5.4.2=h80987f9_0
+  - zlib=1.2.13=h5a0b063_0
+  - zstd=1.5.5=hd90d995_0
+prefix: /opt/homebrew/Caskroom/miniconda/base/envs/predictive_neuron
